# Cpp_template

./: CMakeLists.txt
documentation/: CMakeLists.txt
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt
